edycja modułu analiz

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,11 @@
             }
         })();
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@3.6.0/cdn.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-box-and-violin-plot@4.2.0/build/Chart.BoxPlot.min.js"></script>
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top custom-navbar-style">
