--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -44,7 +44,7 @@
                     <h5 class="card-title">Analizy i Raporty</h5>
                     <p class="card-text text-muted">Analizuj zebrane dane, porównuj ceny jednostkowe i generuj raporty.</p>
                     <div class="mt-auto">
-                        <a href="{{ url_for('tenders.unit_prices_analysis') }}" class="btn btn-info stretched-link">Przejdź do Analiz</a>
+                        <a href="{{ url_for('tenders.analysis_dashboard') }}" class="btn btn-info stretched-link">Przejdź do Analiz</a>
                     </div>
                 </div>
             </div>
